tests/snapshots/tui_snapshots__preset_name_prompt_with_partial_input.snap
---
source: tests/tui_snapshots.rs
expression: render_to_buffer(&app)
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "╭ Lines ───────────────────────────────────────────────────────────────────────╮",
        "│ ↑↓ widgets · ←→ lines · Enter replace · a add · l line · d del · r raw · Alt │",
        "│ ▶ Line 1 (1 widgets)                                                         │",
        "│     ▶ Model                                                                  │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                   ╭ Save preset ─────────────────────────╮                   │",
        "│                   │ Save preset                          │                   │",
        "╰───────────────────│                                      │───────────────────╯",
        "╭ Widget Settings ──│ Name: my-laptop_                     │───────────────────╮",
        "│ Tab to focus · the│                                      │─────────────────╮ │",
        "│   Text color: (def╰──────────────────────────────────────╯config           │ │",
        "│   Background: (default)              ││  ╰─────────────────────────────────╯ │",
        "│   Bold: [ ] default                  ││                                      │",
        "│                                      ││  Sonnet 4.7                          │",
        "│ (no custom params)                   ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "│                                      ││                                      │",
        "╰──────────────────────────────────────╯╰──────────────────────────────────────╯",
        "  Tab switch panel  ? help  ^S save  q quit                                     ",
    ],
    styles: [
        x: 0, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 33, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 11, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 0, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: SLOW_BLINK,
        x: 38, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 59, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 16, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 60, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 66, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 77, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 16, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 10, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 17, fg: Indexed(6), bg: Reset, underline: Reset, modifier: BOLD,
        x: 53, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 28, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 38, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 43, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
