tests/snapshots/tui_snapshots__settings_named_color_picker_open_shows_swatches.snap
---
source: tests/tui_snapshots.rs
expression: render_to_buffer(&app)
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "╭ Lines ───────────────────────────────────────────────────────────────────────╮",
        "│ ↑↓ widgets · ←→ lines · Enter replace · a add · l line · d del · r raw · Alt │",
        "│ ▶ Line 1 (1 widgets)                                                         │",
        "│     ▶ Model                                                                  │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "╰──────────────────────────────────────────────────────────────────────────────╯",
        "╭ Widget Settings ─────────────────────╮╭ Preview ─────────────────────────────╮",
        "│ edit · ↑↓ navigate · Enter apply · E ││ ╭──────────────────────────────────╮ │",
        "│ ▶ Text color: (default)              ││ │ > ctrl+s saves config            │ │",
        "│        Default (none)                ││ ╰──────────────────────────────────╯ │",
        "│     ██ Black  #000000                ││                                      │",
        "│   ▶ ██ Red  #cd0000                  ││ Sonnet 4.7                           │",
        "│     ██ Green  #00cd00                ││                                      │",
        "│     ██ Yellow  #cdcd00               ││                                      │",
        "│     ██ Blue  #0000ee                 ││                                      │",
        "│     ██ Magenta  #cd00cd              ││                                      │",
        "╰──────────────────────────────────────╯╰──────────────────────────────────────╯",
        "Tab switch panel  ? help  ^S save  q quit                                       ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 38, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 16, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 14, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 46, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 65, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 77, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 15, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 16, fg: Rgb(0, 0, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 16, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 17, fg: Rgb(205, 0, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 17, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 12, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 21, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 17, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 17, fg: Indexed(6), bg: Reset, underline: Reset, modifier: BOLD,
        x: 52, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 18, fg: Rgb(0, 205, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 18, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 19, fg: Rgb(205, 205, 0), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 15, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 19, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 20, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 20, fg: Rgb(0, 0, 238), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 20, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 21, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 6, y: 21, fg: Rgb(205, 0, 205), bg: Reset, underline: Reset, modifier: NONE,
        x: 9, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 21, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 3, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 18, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 19, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 26, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 35, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 36, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 41, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
