tests/snapshots/tui_snapshots__settings_scrolls_when_custom_command_has_many_args.snap
---
source: tests/tui_snapshots.rs
expression: render_to_buffer(&app)
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "╭ Lines ───────────────────────────────────────────────────────────────────────╮",
        "│ ↑↓ widgets · ←→ lines · Enter replace · a add · l line · d del · r raw · Alt │",
        "│ ▶ Line 1 (1 widgets)                                                         │",
        "│     ▶ Custom Command                                                         │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "╰──────────────────────────────────────────────────────────────────────────────╯",
        "╭ Widget Settings ─────────────────────╮╭ Preview ─────────────────────────────╮",
        "│ ↑↓ select · Enter edit · Space toggl ││  ╭─────────────────────────────────╮ │",
        "│    4: e                              ││  │ > ctrl+s saves config           │ │",
        "│    5: f                              ││  ╰─────────────────────────────────╯ │",
        "│    6: g                              ││                                      │",
        "│    7: h                              ││  a b c d e f g h i j k l             │",
        "│    8: i                              ││                                      │",
        "│    9: j                              ││                                      │",
        "│   10: k                              ││                                      │",
        "│ ▶ 11: l                              ││                                      │",
        "╰──────────────────────────────────────╯╰──────────────────────────────────────╯",
        "  Tab switch panel  ? help  ^S save  q quit                                     ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 22, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 12, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 38, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 13, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 14, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 14, fg: Gray, bg: Reset, underline: Reset, modifier: NONE,
        x: 47, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 66, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 77, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 15, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 15, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 78, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 16, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 16, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 17, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 17, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 17, fg: Indexed(7), bg: Reset, underline: Reset, modifier: NONE,
        x: 66, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 18, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 18, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 19, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 19, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 20, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 20, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 21, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 21, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 9, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 21, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 22, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 40, y: 22, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 21, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 28, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 30, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 38, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: DIM,
        x: 43, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
